K8S/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skill-service-dep
spec:
  selector:
    matchLabels:
      app: skill-service-dep
  template:
    metadata:
      labels:
        app: skill-service-dep
    spec:
      containers:
      - name: skill-service-dep
        image: padmasekhar/skill-service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: skill-service-svc
spec:
  type: ClusterIP
  selector:
    app: skill-service-dep
  ports:
    - name: http
      protocol: TCP
      port: 5435
      targetPort: 80
