K8S/service.yml
apiVersion: v1
kind: Service
metadata:
  name: skill-service-np-svc
spec:
  type: NodePort
  selector:
    app: skill-service-dep
  ports:
    - name: http
      protocol: TCP
      port: 5437
      targetPort: 80
